Fix sky being too short for 400-feet streets.

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -542,7 +542,7 @@ body.gallery-visible #gallery-shield {
 #street-section-sky {
   position: absolute;
   left: 0;
-  right: -1000px;
+  right: -2000px; // TODO hack
   height: @canvasBaseline + 150px;
   background: @skyColour;
 
